--- a/src/lobbyTemplate.fxml
+++ b/src/lobbyTemplate.fxml
@@ -20,18 +20,18 @@
                 <Font name="Cartoonist Kooky" size="20.0" />
             </font>
         </Label>
-        <JFXTextField focusColor="#f788c9" layoutX="196.0" layoutY="225.0" promptText="username" unFocusColor="#c891f3">
+        <JFXTextField fx:id="usernameField" focusColor="#f788c9" layoutX="196.0" layoutY="225.0" promptText="username" unFocusColor="#c891f3">
             <font>
                 <Font name="Cartoonist Kooky" size="20.0" />
             </font>
         </JFXTextField>
-        <JFXButton fx:id="enterBtn" layoutX="494.0" layoutY="337.0" onAction="#changePane" />
+        <JFXButton fx:id="enterBtn" layoutX="481.0" layoutY="337.0" onAction="#changePane" />
         <Label layoutX="137.0" layoutY="282.0" text="enter IP address:" textFill="#f78bc9">
             <font>
                 <Font name="Cartoonist Kooky" size="20.0" />
             </font>
         </Label>
-        <JFXTextField focusColor="#c891f3" layoutX="196.0" layoutY="305.0" promptText="username" unFocusColor="#f78bc9">
+        <JFXTextField fx:id="IPField" focusColor="#c891f3" layoutX="196.0" layoutY="305.0" promptText="username" unFocusColor="#f78bc9">
             <font>
                 <Font name="Cartoonist Kooky" size="20.0" />
             </font>
