--- a/src/lobbyTemplate.fxml
+++ b/src/lobbyTemplate.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #090F1D" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="lobbyAnchor" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #090F1D" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <ImageView fitHeight="160.0" fitWidth="338.0" layoutX="131.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@resources/Title.png" />
             </image>
         </ImageView>
-        <Label layoutX="137.0" layoutY="202.0" text="enter username:" textFill="#c891f3">
+        <Label fx:id="enterNameLabel" layoutX="137.0" layoutY="202.0" text="enter username:" textFill="#c891f3">
             <font>
                 <Font name="Cartoonist Kooky" size="20.0" />
             </font>
