--- a/src/gameTemplate.fxml
+++ b/src/gameTemplate.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #090f1d" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="gameAnchor" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #090f1d" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox fx:id="allPlayersVbox" layoutX="6.0" layoutY="4.0" prefHeight="600.0" prefWidth="199.0" style="-fx-background-color: #040916">
             <children>
