urrentplayer is now diff color in list

--- a/src/theme.css
+++ b/src/theme.css
@@ -20,3 +20,9 @@
 .anchorpane-Pop{
     -fx-background-color: #040916;
 }
+
+.selected-player-list {
+    -fx-text-fill: #F78BC9;
+    -fx-font-family: Cartoonist;
+    -fx-font-size: 21;
+}
