--- a/src/theme.css
+++ b/src/theme.css
@@ -13,7 +13,13 @@
 
 .label-players{
     -fx-text-fill: #cccccc;
-    -fx-font-family: Festival Jomfruer;
+    -fx-font-family: BubbleGum;
+    -fx-font-size: 21;
+}
+
+.label-connected{
+    -fx-text-fill: #08f570;
+    -fx-font-family: BubbleGum;
     -fx-font-size: 21;
 }
 
@@ -23,6 +29,6 @@
 
 .selected-player-list {
     -fx-text-fill: #F78BC9;
-    -fx-font-family: Festival Jomfruer;
+    -fx-font-family: BubbleGum;
     -fx-font-size: 21;
 }
