--- a/src/serverTemplate.fxml
+++ b/src/serverTemplate.fxml
@@ -2,30 +2,34 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="playerTF" layoutX="118.0" layoutY="113.0" />
-      <TextField fx:id="questionTF" layoutX="116.0" layoutY="166.0" />
-      <Label layoutX="132.0" layoutY="85.0" text="Number of Players:">
+      <TextField fx:id="playerTF" layoutX="295.0" layoutY="109.0" prefHeight="27.0" prefWidth="97.0" />
+      <TextField fx:id="questionTF" layoutX="295.0" layoutY="165.0" prefHeight="27.0" prefWidth="98.0" />
+      <Label layoutX="315.0" layoutY="86.0" text="# of Players">
          <font>
-            <Font name="Arial Black" size="13.0" />
+            <Font name="Calibri" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="123.0" layoutY="140.0" text="Number of Questions:">
+      <Label layoutX="316.0" layoutY="141.0" text="# of Rounds">
          <font>
-            <Font name="Arial Black" size="13.0" />
+            <Font name="Calibri" size="13.0" />
          </font>
       </Label>
-      <Button fx:id="startBtn" layoutX="143.0" layoutY="211.0" mnemonicParsing="false" onAction="#startServer" text="START SERVER" />
+      <Button fx:id="startBtn" layoutX="296.0" layoutY="202.0" mnemonicParsing="false" onAction="#startServer" prefHeight="27.0" prefWidth="99.0" text="START SERVER">
+         <font>
+            <Font name="Calibri" size="11.0" />
+         </font></Button>
       <Label layoutX="75.0" layoutY="27.0" text="LET'S LARO SERVER">
          <font>
             <Font name="BubbleGum" size="29.0" />
          </font>
       </Label>
+      <ListView fx:id="pListView" layoutX="12.0" layoutY="78.0" prefHeight="200.0" prefWidth="273.0" />
    </children>
 </AnchorPane>
