no font needed to install

--- a/src/lobbyTemplate.fxml
+++ b/src/lobbyTemplate.fxml
@@ -15,7 +15,7 @@
                 <Image url="@resources/Title.png" />
             </image>
         </ImageView>
-        <Label fx:id="enterNameLabel" layoutX="137.0" layoutY="202.0" text="Enter Username:" textFill="#c891f3">
+        <Label fx:id="enterNameLabel" layoutX="137.0" layoutY="202.0" style="-fx-font-family: BubbleGum;" text="Enter Username:" textFill="#c891f3">
             <font>
                 <Font name="BubbleGum" size="22.0" />
             </font>
@@ -27,7 +27,7 @@
         </JFXTextField>
 
         <JFXButton fx:id="enterBtn" layoutX="494.0" layoutY="337.0" onAction="#joinGame" />
-        <Label layoutX="137.0" layoutY="282.0" text="enter IP address:" textFill="#f78bc9">
+        <Label layoutX="137.0" layoutY="282.0" style="-fx-font-family: BubbleGum;" text="enter IP address:" textFill="#f78bc9">
             <font>
                 <Font name="BubbleGum" size="22.0" />
             </font>
